--- a/anubisProject/Saved/Config/Windows/Engine.ini
+++ b/anubisProject/Saved/Config/Windows/Engine.ini
@@ -9,19 +9,15 @@ Paths=../../../Engine/Plugins/Runtime/AppleARKit/Content
 Paths=../../../Engine/Plugins/Runtime/Oculus/OculusVR/Content
 Paths=../../../Engine/Plugins/Runtime/Steam/SteamVR/Content
 
+[/Script/UnrealEd.UnrealEdEngine]
+TemplateMapInfos=(ThumbnailTexture=Texture2D'"/Engine/Maps/Templates/Thumbnails/Default.Default"',Map="/Engine/Maps/Templates/Template_Default")
+TemplateMapInfos=(ThumbnailTexture=Texture2D'"/Engine/Maps/Templates/Thumbnails/VR-Basic.VR-Basic"',Map="/Engine/Maps/Templates/VR-Basic")
+
 [/Script/AndroidPlatformEditor.AndroidSDKSettings]
 SDKPath=(Path="")
 NDKPath=(Path="")
 ANTPath=(Path="")
 JavaPath=(Path="")
-
-[WindowsApplication.Accessibility]
-StickyKeysHotkey=False
-ToggleKeysHotkey=True
-FilterKeysHotkey=True
-StickyKeysConfirmation=True
-ToggleKeysConfirmation=True
-FilterKeysConfirmation=True
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnableTransport=True
@@ -31,5 +27,16 @@ MulticastTimeToLive=1
 EnableTunnel=False
 TunnelUnicastEndpoint=
 TunnelMulticastEndpoint=
+
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
+
+[/Script/UnrealEd.EditorEngine]
+FlipNormalMapGreenChannel=False
 
 
