Finished Blink Mechanic for Player

--- a/anubisProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/anubisProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -99,8 +99,6 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/AI/SCP-173.SCP-173
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [DetailCategories]
 FirstPersonOverview_C.Testing=True
@@ -443,6 +441,7 @@ REINST_SCP-173_C_119.Events=True
 /Game/AI/SCP_173.SCP_173=0
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
 /Game/Blink.Blink=0
+/Game/AI/SCP-173.SCP-173=1
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -499,5 +498,20 @@ Uncategorized=False
 PreviewWidth=1280
 PreviewHeight=720
 PreviewAspectRatio=16:9
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bEnableSourceControlCompatabilityCheck=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
 
 
