Added Player Blink

--- a/anubisProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/anubisProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -99,6 +99,8 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/AI/SCP-173.SCP-173
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [DetailCategories]
 FirstPersonOverview_C.Testing=True
@@ -435,6 +437,56 @@ REINST_SCP-173_C_119.ComponentReplication=True
 REINST_SCP-173_C_119.Activation=True
 REINST_SCP-173_C_119.Cooking=True
 REINST_SCP-173_C_119.Events=True
+REINST_SCP-173_C_43.Variable=True
+REINST_SCP-173_C_43.Sockets=True
+REINST_SCP-173_C_43.Character Movement: Jumping / Falling=True
+REINST_SCP-173_C_43.Character Movement (General Settings)=True
+REINST_SCP-173_C_43.Character Movement: Walking=True
+REINST_SCP-173_C_43.Character Movement: Swimming=True
+REINST_SCP-173_C_43.Character Movement: Flying=True
+REINST_SCP-173_C_43.Character Movement: Custom Movement=True
+REINST_SCP-173_C_43.Character Movement (Rotation Settings)=True
+REINST_SCP-173_C_43.Character Movement (Networking)=True
+REINST_SCP-173_C_43.Character Movement: Physics Interaction=True
+REINST_SCP-173_C_43.Character Movement=True
+REINST_SCP-173_C_43.Character Movement: Avoidance=True
+REINST_SCP-173_C_43.Character Movement: NavMesh Movement=True
+REINST_SCP-173_C_43.RootMotion=True
+REINST_SCP-173_C_43.NavMovement=True
+REINST_SCP-173_C_43.Velocity=True
+REINST_SCP-173_C_43.PlanarMovement=True
+REINST_SCP-173_C_43.MovementComponent=True
+REINST_SCP-173_C_43.Tags=True
+REINST_SCP-173_C_43.ComponentReplication=True
+REINST_SCP-173_C_43.Activation=True
+REINST_SCP-173_C_43.Cooking=True
+REINST_SCP-173_C_43.Events=True
+ByteProperty.Variable=True
+ByteProperty.DefaultValueCategory=True
+REINST_SCP-173_C_338.Variable=True
+REINST_SCP-173_C_338.Sockets=True
+REINST_SCP-173_C_338.Character Movement: Jumping / Falling=True
+REINST_SCP-173_C_338.Character Movement (General Settings)=True
+REINST_SCP-173_C_338.Character Movement: Walking=True
+REINST_SCP-173_C_338.Character Movement: Swimming=True
+REINST_SCP-173_C_338.Character Movement: Flying=True
+REINST_SCP-173_C_338.Character Movement: Custom Movement=True
+REINST_SCP-173_C_338.Character Movement (Rotation Settings)=True
+REINST_SCP-173_C_338.Character Movement (Networking)=True
+REINST_SCP-173_C_338.Character Movement: Physics Interaction=True
+REINST_SCP-173_C_338.Character Movement=True
+REINST_SCP-173_C_338.Character Movement: Avoidance=True
+REINST_SCP-173_C_338.Character Movement: NavMesh Movement=True
+REINST_SCP-173_C_338.RootMotion=True
+REINST_SCP-173_C_338.NavMovement=True
+REINST_SCP-173_C_338.Velocity=True
+REINST_SCP-173_C_338.PlanarMovement=True
+REINST_SCP-173_C_338.MovementComponent=True
+REINST_SCP-173_C_338.Tags=True
+REINST_SCP-173_C_338.ComponentReplication=True
+REINST_SCP-173_C_338.Activation=True
+REINST_SCP-173_C_338.Cooking=True
+REINST_SCP-173_C_338.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/FirstPersonOverview.FirstPersonOverview=1
@@ -442,6 +494,7 @@ REINST_SCP-173_C_119.Events=True
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
 /Game/Blink.Blink=0
 /Game/AI/SCP-173.SCP-173=1
+/Game/Widgets/Blink.Blink=0
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -472,6 +525,10 @@ NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+SCP-173_C="\"Object.WalkSpeed\" \"Object.WalkSpeed\" "
+Character=
+Pawn=
+FirstPersonCharacter_C=
 
 [MRU]
 MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
@@ -513,5 +570,15 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
+
+[DetailCustomWidgetExpansion]
+K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,
+SCP-173_C=K2Node_VariableGet.DefaultValueCategory.None,
+FloatProperty=K2Node_VariableGet.DefaultValueCategory.None,
+BoolProperty=
+K2Node_VariableSet=
+
+[SuppressableDialogs]
+DeleteVariableInUse_Warning=False
 
 
