Added Death Screen

--- a/anubisProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/anubisProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -487,6 +487,18 @@ REINST_SCP-173_C_338.ComponentReplication=True
 REINST_SCP-173_C_338.Activation=True
 REINST_SCP-173_C_338.Cooking=True
 REINST_SCP-173_C_338.Events=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+K2Node_VariableSet.Events=True
+StrProperty.Variable=True
+StrProperty.DefaultValueCategory=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/FirstPersonOverview.FirstPersonOverview=1
@@ -495,6 +507,7 @@ REINST_SCP-173_C_338.Events=True
 /Game/Blink.Blink=0
 /Game/AI/SCP-173.SCP-173=1
 /Game/Widgets/Blink.Blink=0
+/Game/Widgets/DeathScreen.DeathScreen=1
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -526,9 +539,9 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 SCP-173_C="\"Object.WalkSpeed\" \"Object.WalkSpeed\" "
-Character=
-Pawn=
-FirstPersonCharacter_C=
+Character="\"Object.SCP-173\" \"Object.SCP-173\" "
+Pawn="\"Object.SCP-173\" \"Object.SCP-173\" "
+FirstPersonCharacter_C="\"Object.SCP-173\" \"Object.SCP-173\" "
 
 [MRU]
 MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
@@ -550,11 +563,12 @@ Panel=False
 Primitive=False
 Special Effects=False
 Uncategorized=False
+User Created=False
 
 [UMGEditor.Designer]
-PreviewWidth=1280
-PreviewHeight=720
-PreviewAspectRatio=16:9
+PreviewWidth=1440
+PreviewHeight=900
+PreviewAspectRatio=16:10
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -572,7 +586,7 @@ bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
 
 [DetailCustomWidgetExpansion]
-K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,
+K2Node_VariableGet=
 SCP-173_C=K2Node_VariableGet.DefaultValueCategory.None,
 FloatProperty=K2Node_VariableGet.DefaultValueCategory.None,
 BoolProperty=
@@ -580,5 +594,8 @@ K2Node_VariableSet=
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
+
+[DetailCategoriesAdvanced]
+TextBlock.Performance=True
 
 
