--- a/anubisProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/anubisProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -93,12 +93,14 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
+GlobalAssetPicker.ThumbnailSizeScale=0.100000
+GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/AI/SCP-173.SCP-173
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
@@ -538,10 +540,10 @@ NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-SCP-173_C="\"Object.WalkSpeed\" \"Object.WalkSpeed\" "
-Character="\"Object.SCP-173\" \"Object.SCP-173\" "
-Pawn="\"Object.SCP-173\" \"Object.SCP-173\" "
-FirstPersonCharacter_C="\"Object.SCP-173\" \"Object.SCP-173\" "
+SCP-173_C=
+Character=
+Pawn=
+FirstPersonCharacter_C=
 
 [MRU]
 MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
@@ -586,11 +588,11 @@ bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
 
 [DetailCustomWidgetExpansion]
-K2Node_VariableGet=
+K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,
 SCP-173_C=K2Node_VariableGet.DefaultValueCategory.None,
 FloatProperty=K2Node_VariableGet.DefaultValueCategory.None,
-BoolProperty=
-K2Node_VariableSet=
+BoolProperty=K2Node_VariableGet.DefaultValueCategory.None,
+K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
